Nov 1, 2008
	Start of log... better late than never.